--- a/fase3/css/styles.css
+++ b/fase3/css/styles.css
@@ -1,5 +1,5 @@
 .header{
-    background-color:#ff0000;
+    background-color:#AED6F1;
     color: #f8f8f8;
     text-align: center;
     font-size:xx-large;
@@ -9,33 +9,35 @@
     grid-column-gap: 6px;
     grid-row-gap: 1px;
     }
-    .div1 { grid-area: 1/1/2/2;}
+    .div1 { grid-area: 1/1/2/2;
+    color:rgb(1, 1, 44)
+    }
     nav ul{
-        background-color: #0d5a49;
+        background-color: #AED6F1;
         list-style: none;
     }
     nav ul li a{
         display: block;
-        color: rgb(29, 248, 0);
+        color: rgb(14, 2, 83);
         text-decoration: none;
         transition: margin-left 1.5s;
         transition: color;
     }
     nav ul li a:hover{
         margin-left: 30px;
-        color: rgb(34, 136, 21);
+        color: rgb(10, 4, 85);
     }
     section{
-        background-color: #E0C097;
+        background-color: #020c47;
         grid-column: 1/4;
         text-align: center; 
     }
     h3{
-        color: rgb(22, 223, 22);
+        color: rgb(232, 231, 240);
         font-size: xx-large;
         }
     .otros{
-        color: rgb(165, 88, 88);
+        color: rgb(234, 234, 241);
         font-size: x-large;
        
     }
@@ -45,10 +47,10 @@
         
     }
     footer{
-        background-color: #CEE5D0;
+        background-color: #AED6F1;
         text-align: center;
         font-size: small;
-        color: rgb(250, 110, 85);
+        color: rgb(16, 9, 58);
     }
     
     main{
@@ -56,6 +58,6 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     h5{
-        color: rgb(50, 243, 98);
+        color: rgb(243, 243, 247);
         font-size: xx-large;
         }
